sofa-platform/src/main/cpp/src/sofa.h

SOFAExport double iauS06(double date1, double date2, double x, double y);
SOFAExport double iauS06a(double date1, double date2);
SOFAExport double iauSp00(double date1, double date2);
SOFAExport void iauXy06(double date1, double date2, double *x, double *y);
SOFAExport void iauXys00a(double date1, double date2, double *x, double *y, double *s);
SOFAExport void iauXys00b(double date1, double date2, double *x, double *y, double *s);
SOFAExport void iauXys06a(double date1, double date2, double *x, double *y, double *s);
/* Astronomy/RotationAndTime */
SOFAExport double iauEe00(double date1, double date2, double epsa, double dpsi);
SOFAExport double iauEe00a(double date1, double date2);
SOFAExport double iauEe00b(double date1, double date2);
SOFAExport double iauEe06a(double date1, double date2);
SOFAExport double iauEect00(double date1, double date2);
SOFAExport double iauEqeq94(double date1, double date2);
SOFAExport double iauEra00(double dj1, double dj2);
SOFAExport double iauGmst00(double uta, double utb, double tta, double ttb);
SOFAExport double iauGmst06(double uta, double utb, double tta, double ttb);
SOFAExport double iauGmst82(double dj1, double dj2);
SOFAExport double iauGst00a(double uta, double utb, double tta, double ttb);
SOFAExport double iauGst00b(double uta, double utb);
SOFAExport double iauGst06(double uta, double utb, double tta, double ttb, double rnpb[3][3]);
SOFAExport double iauGst06a(double uta, double utb, double tta, double ttb);
SOFAExport double iauGst94(double uta, double utb);
SOFAExport int iauPvstar(double pv[2][3], double *ra, double *dec, double *pmr, double *pmd, double *px, double *rv);
SOFAExport int iauStarpv(double ra, double dec, double pmr, double pmd, double px, double rv, double pv[2][3]);
/* Astronomy/StarCatalogs */
SOFAExport void iauFk52h(double r5, double d5, double dr5, double dd5, double px5, double rv5, double *rh, double *dh, double *drh, double *ddh, double *pxh, double *rvh);
SOFAExport void iauFk5hip(double r5h[3][3], double s5h[3]);
SOFAExport void iauFk5hz(double r5, double d5, double date1, double date2, double *rh, double *dh);
SOFAExport void iauH2fk5(double rh, double dh, double drh, double ddh, double pxh, double rvh, double *r5, double *d5, double *dr5, double *dd5, double *px5, double *rv5);
SOFAExport void iauHfk5z(double rh, double dh, double date1, double date2, double *r5, double *d5, double *dr5, double *dd5);
SOFAExport int  iauStarpm(double ra1, double dec1, double pmr1, double pmd1, double px1, double rv1, double ep1a, double ep1b, double ep2a, double ep2b, double *ra2, double *dec2, double *pmr2, double *pmd2, double *px2, double *rv2);