sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

	/**
	 * Original signature : <code>double iauS06(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:165</i>
	 */
	native public static double iauS06(double date1, double date2, double x, double y);
	/**
	 * Original signature : <code>double iauS06a(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:167</i>
	 */
	native public static double iauS06a(double date1, double date2);
	/**
	 * Original signature : <code>double iauSp00(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:169</i>
	 */
	native public static double iauSp00(double date1, double date2);
	/**
	 * Original signature : <code>void iauXy06(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:171</i>
	 */
	public static void iauXy06(double date1, double date2, Pointer<Double > x, Pointer<Double > y) {
		iauXy06(date1, date2, Pointer.getPeer(x), Pointer.getPeer(y));
	}
	protected native static void iauXy06(double date1, double date2, @Ptr long x, @Ptr long y);
	/**
	 * Original signature : <code>void iauXys00a(double, double, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:173</i>
	 */
	public static void iauXys00a(double date1, double date2, Pointer<Double > x, Pointer<Double > y, Pointer<Double > s) {
		iauXys00a(date1, date2, Pointer.getPeer(x), Pointer.getPeer(y), Pointer.getPeer(s));
	}
	protected native static void iauXys00a(double date1, double date2, @Ptr long x, @Ptr long y, @Ptr long s);
	/**
	 * Original signature : <code>void iauXys00b(double, double, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:175</i>
	 */
	public static void iauXys00b(double date1, double date2, Pointer<Double > x, Pointer<Double > y, Pointer<Double > s) {
		iauXys00b(date1, date2, Pointer.getPeer(x), Pointer.getPeer(y), Pointer.getPeer(s));
	}
	protected native static void iauXys00b(double date1, double date2, @Ptr long x, @Ptr long y, @Ptr long s);
	/**
	 * Original signature : <code>void iauXys06a(double, double, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:177</i>
	 */
	public static void iauXys06a(double date1, double date2, Pointer<Double > x, Pointer<Double > y, Pointer<Double > s) {
		iauXys06a(date1, date2, Pointer.getPeer(x), Pointer.getPeer(y), Pointer.getPeer(s));
	}
	protected native static void iauXys06a(double date1, double date2, @Ptr long x, @Ptr long y, @Ptr long s);
	/**
	 * Astronomy/RotationAndTime<br>
	 * Original signature : <code>double iauEe00(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:182</i>
	 */
	native public static double iauEe00(double date1, double date2, double epsa, double dpsi);
	/**
	 * Original signature : <code>double iauEe00a(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:184</i>
	 */
	native public static double iauEe00a(double date1, double date2);
	/**
	 * Original signature : <code>double iauEe00b(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:186</i>
	 */
	native public static double iauEe00b(double date1, double date2);
	/**
	 * Original signature : <code>double iauEe06a(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:188</i>
	 */
	native public static double iauEe06a(double date1, double date2);
	/**
	 * Original signature : <code>double iauEect00(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:190</i>
	 */
	native public static double iauEect00(double date1, double date2);
	/**
	 * Original signature : <code>double iauEqeq94(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:192</i>
	 */
	native public static double iauEqeq94(double date1, double date2);
	/**
	 * Original signature : <code>double iauEra00(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:194</i>
	 */
	native public static double iauEra00(double dj1, double dj2);
	/**
	 * Original signature : <code>double iauGmst00(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:196</i>
	 */
	native public static double iauGmst00(double uta, double utb, double tta, double ttb);
	/**
	 * Original signature : <code>double iauGmst06(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:198</i>
	 */
	native public static double iauGmst06(double uta, double utb, double tta, double ttb);
	/**
	 * Original signature : <code>double iauGmst82(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:200</i>
	 */
	native public static double iauGmst82(double dj1, double dj2);
	/**
	 * Original signature : <code>double iauGst00a(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:202</i>
	 */
	native public static double iauGst00a(double uta, double utb, double tta, double ttb);
	/**
	 * Original signature : <code>double iauGst00b(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:204</i>
	 */
	native public static double iauGst00b(double uta, double utb);
	/**
	 * Original signature : <code>double iauGst06(double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:206</i>
	 */
	public static double iauGst06(double uta, double utb, double tta, double ttb, Pointer<Double > rnpb) {
		return iauGst06(uta, utb, tta, ttb, Pointer.getPeer(rnpb));
	}
	protected native static double iauGst06(double uta, double utb, double tta, double ttb, @Ptr long rnpb);
	/**
	 * Original signature : <code>double iauGst06a(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:208</i>
	 */
	native public static double iauGst06a(double uta, double utb, double tta, double ttb);
	/**
	 * Original signature : <code>double iauGst94(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:210</i>
	 */
	native public static double iauGst94(double uta, double utb);
	/**
	 * Astronomy/SpaceMotion<br>
	 * Original signature : <code>int iauPvstar(double[2][3], double*, double*, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:215</i>
	 */
	public static int iauPvstar(Pointer<Double > pv, Pointer<Double > ra, Pointer<Double > dec, Pointer<Double > pmr, Pointer<Double > pmd, Pointer<Double > px, Pointer<Double > rv) {
		return iauPvstar(Pointer.getPeer(pv), Pointer.getPeer(ra), Pointer.getPeer(dec), Pointer.getPeer(pmr), Pointer.getPeer(pmd), Pointer.getPeer(px), Pointer.getPeer(rv));
	}
	protected native static int iauPvstar(@Ptr long pv, @Ptr long ra, @Ptr long dec, @Ptr long pmr, @Ptr long pmd, @Ptr long px, @Ptr long rv);
	/**
	 * Original signature : <code>int iauStarpv(double, double, double, double, double, double, double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:217</i>
	 */
	public static int iauStarpv(double ra, double dec, double pmr, double pmd, double px, double rv, Pointer<Double > pv) {
		return iauStarpv(ra, dec, pmr, pmd, px, rv, Pointer.getPeer(pv));
	}
	protected native static int iauStarpv(double ra, double dec, double pmr, double pmd, double px, double rv, @Ptr long pv);
	/**
	 * Astronomy/StarCatalogs<br>
	 * Original signature : <code>void iauFk52h(double, double, double, double, double, double, double*, double*, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:222</i>
	 */
	public static void iauFk52h(double r5, double d5, double dr5, double dd5, double px5, double rv5, Pointer<Double > rh, Pointer<Double > dh, Pointer<Double > drh, Pointer<Double > ddh, Pointer<Double > pxh, Pointer<Double > rvh) {
		iauFk52h(r5, d5, dr5, dd5, px5, rv5, Pointer.getPeer(rh), Pointer.getPeer(dh), Pointer.getPeer(drh), Pointer.getPeer(ddh), Pointer.getPeer(pxh), Pointer.getPeer(rvh));
	}
	protected native static void iauFk52h(double r5, double d5, double dr5, double dd5, double px5, double rv5, @Ptr long rh, @Ptr long dh, @Ptr long drh, @Ptr long ddh, @Ptr long pxh, @Ptr long rvh);
	/**
	 * Original signature : <code>void iauFk5hip(double[3][3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:224</i>
	 */
	public static void iauFk5hip(Pointer<Double > r5h, Pointer<Double > s5h) {
		iauFk5hip(Pointer.getPeer(r5h), Pointer.getPeer(s5h));
	}
	protected native static void iauFk5hip(@Ptr long r5h, @Ptr long s5h);
	/**
	 * Original signature : <code>void iauFk5hz(double, double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:226</i>
	 */
	public static void iauFk5hz(double r5, double d5, double date1, double date2, Pointer<Double > rh, Pointer<Double > dh) {
		iauFk5hz(r5, d5, date1, date2, Pointer.getPeer(rh), Pointer.getPeer(dh));
	}
	protected native static void iauFk5hz(double r5, double d5, double date1, double date2, @Ptr long rh, @Ptr long dh);
	/**
	 * Original signature : <code>void iauH2fk5(double, double, double, double, double, double, double*, double*, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:228</i>
	 */
	public static void iauH2fk5(double rh, double dh, double drh, double ddh, double pxh, double rvh, Pointer<Double > r5, Pointer<Double > d5, Pointer<Double > dr5, Pointer<Double > dd5, Pointer<Double > px5, Pointer<Double > rv5) {
		iauH2fk5(rh, dh, drh, ddh, pxh, rvh, Pointer.getPeer(r5), Pointer.getPeer(d5), Pointer.getPeer(dr5), Pointer.getPeer(dd5), Pointer.getPeer(px5), Pointer.getPeer(rv5));
	}
	protected native static void iauH2fk5(double rh, double dh, double drh, double ddh, double pxh, double rvh, @Ptr long r5, @Ptr long d5, @Ptr long dr5, @Ptr long dd5, @Ptr long px5, @Ptr long rv5);
	/**
	 * Original signature : <code>void iauHfk5z(double, double, double, double, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:230</i>
	 */
	public static void iauHfk5z(double rh, double dh, double date1, double date2, Pointer<Double > r5, Pointer<Double > d5, Pointer<Double > dr5, Pointer<Double > dd5) {
		iauHfk5z(rh, dh, date1, date2, Pointer.getPeer(r5), Pointer.getPeer(d5), Pointer.getPeer(dr5), Pointer.getPeer(dd5));
	}
	protected native static void iauHfk5z(double rh, double dh, double date1, double date2, @Ptr long r5, @Ptr long d5, @Ptr long dr5, @Ptr long dd5);
	/**
	 * Original signature : <code>int iauStarpm(double, double, double, double, double, double, double, double, double, double, double*, double*, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:232</i>
	 */
	public static int iauStarpm(double ra1, double dec1, double pmr1, double pmd1, double px1, double rv1, double ep1a, double ep1b, double ep2a, double ep2b, Pointer<Double > ra2, Pointer<Double > dec2, Pointer<Double > pmr2, Pointer<Double > pmd2, Pointer<Double > px2, Pointer<Double > rv2) {
		return iauStarpm(ra1, dec1, pmr1, pmd1, px1, rv1, ep1a, ep1b, ep2a, ep2b, Pointer.getPeer(ra2), Pointer.getPeer(dec2), Pointer.getPeer(pmr2), Pointer.getPeer(pmd2), Pointer.getPeer(px2), Pointer.getPeer(rv2));
	}
	protected native static int iauStarpm(double ra1, double dec1, double pmr1, double pmd1, double px1, double rv1, double ep1a, double ep1b, double ep2a, double ep2b, @Ptr long ra2, @Ptr long dec2, @Ptr long pmr2, @Ptr long pmd2, @Ptr long px2, @Ptr long rv2);
